grammar.js
    document: ($) =>
      seq(
        optional(
          choice(
            EXTENSION_MINUS_METADATA ? $.minus_metadata : choice(),
            EXTENSION_PLUS_METADATA ? $.plus_metadata : choice(),
          ),
        ),
        alias(prec.right(repeat($._block_not_section)), $.section),
        repeat($.section),
      ),

    // MARKDOWN

    // A backslash escape. This can often be part of different nodes like link labels
    //
    // https://github.github.com/gfm/#backslash-escapes
    _block_not_section: ($) =>
      choice(
        alias($._setext_heading1, $.setext_heading),
        alias($._setext_heading2, $.setext_heading),
        $.import_statement,
        $.export_statement,
        $._jsx_element,
        $.jsx_expression,
        $.paragraph,
        $.block_quote,
        $.thematic_break,
        $.list,
        $.fenced_code_block,
        EXTENSION_LATEX ? $.math_block : choice(),
        $._blank_line,
        $.link_reference_definition,
        EXTENSION_PIPE_TABLE ? $.pipe_table : choice(),
      ),
    section: ($) =>
      choice(
        $._section1,
        $._section2,
        $._section3,
        $._section4,
        $._section5,
        $._section6,
      ),
    _section1: ($) =>
      prec.right(
        seq(
          alias($._atx_heading1, $.atx_heading),
          repeat(
            choice(
              alias(
                choice(
                  $._section6,
                  $._section5,
                  $._section4,
                  $._section3,
                  $._section2,
                ),
                $.section,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section2: ($) =>
      prec.right(
        seq(
          alias($._atx_heading2, $.atx_heading),
          repeat(
            choice(
              alias(
                choice($._section6, $._section5, $._section4, $._section3),
                $.section,
              ),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section3: ($) =>
      prec.right(
        seq(
          alias($._atx_heading3, $.atx_heading),
          repeat(
            choice(
              alias(choice($._section6, $._section5, $._section4), $.section),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section4: ($) =>
      prec.right(
        seq(
          alias($._atx_heading4, $.atx_heading),
          repeat(
            choice(
              alias(choice($._section6, $._section5), $.section),
              $._block_not_section,
            ),
          ),
        ),
      ),
    _section5: ($) =>
      prec.right(
        seq(
          alias($._atx_heading5, $.atx_heading),
          repeat(choice(alias($._section6, $.section), $._block_not_section)),
        ),
      ),
    _section6: ($) =>
      prec.right(
        seq(
          alias($._atx_heading6, $.atx_heading),
          repeat($._block_not_section),
        ),
      ),

    // LEAF BLOCKS

    // A thematic break. This is currently handled by the external scanner but maybe could be
    // parsed using normal tree-sitter rules.
    //
    // https://github.github.com/gfm/#thematic-breaks
    _code_fence_line: ($) => /[^\n\r]*/,
    code_fence_content: ($) => repeat1(choice($._newline, $._code_fence_line)),
    math_block: ($) =>
      prec.right(
        seq(
          alias($._math_block_start, $.math_block_delimiter),
          $._newline,
          optional($.code_fence_content),
          optional(
            seq(
              alias($._math_block_end, $.math_block_delimiter),
              $._close_block,
              $._newline,
            ),
          ),
          $._block_close,
        ),
      ),

    // CONTAINER BLOCKS

    // A block quote. This is the most basic example of a container block handled by the
    // external scanner.
    //
    // https://github.github.com/gfm/#block-quotes
    _newline: ($) => seq($._line_ending, optional($.block_continuation)),
